/*
 * Copyright (C) 2021 Swift Navigation Inc.
 * Contact: https://support.swiftnav.com
 *
 * This source is subject to the license found in the file 'LICENSE' which must
 * be be distributed together with this source. All other rights reserved.
 *
 * THIS CODE AND INFORMATION IS PROVIDED "AS IS" WITHOUT WARRANTY OF ANY KIND,
 * EITHER EXPRESSED OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE IMPLIED
 * WARRANTIES OF MERCHANTABILITY AND/OR FITNESS FOR A PARTICULAR PURPOSE.
 */

syntax = "proto3";

/** Ext_Events
 *
 * Messages reporting accurately-timestamped external events, e.g. camera
 * shutter time.
 */

package swiftnav.sbp.ext_events;


/** Reports timestamped external pin event
 *
 * Reports detection of an external event, the GPS time it occurred, which pin
 * it was and whether it was rising or falling.
 */
message MsgExtEvent {
    uint32 wn = 1;
    uint32 tow = 2;
    sint32 ns_residual = 3;
    uint32 flags = 4;
    uint32 pin = 5;
}